--- a/tym-cv.tex
+++ b/tym-cv.tex
@@ -1,6 +1,42 @@
-\documentclass[a4,11pt]{tym-cv}
+\documentclass{tym-cv}
+
+\name{Tim}{Albes}
+\jobinfo{Associate Researcher at Technical University of Munich}
+\photo{3.cm}{pic.png}
+
+\socialinfo{
+    \email{my.address@mail.com}
+    \smartphone{+49 1xx xxxxxx75}\\
+    \linkedin{talbes}
+    \github{talbes}\\
+    % \website{www.google.de}{vermillion.ddns.net}
+    \address{Munich, Germany}\\
+    \infos{Born on xx. Month 19xx in Town, Germany}
+}
+
+\leftfooter{\textsc{October 2020}}
+\midfooter{\textsc{Curriculum Vitae -- Dr. Tim Albes}}
+\righhtfooter{\thepage /\pageref{LastPage}}
 
 \begin{document}
 
-{\fatty NEW AWSOME CV.}
+\maketitle
+
+\makefooter
+
+% profile
+\par{
+Open-minded and curious IT professional with strong analytical and programming skills. Recent PhD graduate in Computational Physics/Statistics with highest distinction; currently developing scientific open-source software and giving online lectures. Strong communication skills due to extensive teaching experience. Seeking opportunities to apply my problem-solving skills in the fields of Software Engineering and Data Science, and within a diverse working environment.
+}
+
+\sectionTitle{Education}{\faMortarBoard}
+\sectionTitle{Experience}{\faRoad} %\faRoad,\faSuitcase,\faGroup,\faDatabase
+\sectionTitle{Skills}{\faTasks}
+\sectionTitle{Languages}{\faGlobe}
+\sectionTitle{Projects}{\faLaptop}
+\sectionTitle{References}{\faQuoteLeft}
+
+\pagebreak
+Helloe.
+
 \end{document}
