Finalized format of relevant sections. Added letter template. Included example text.

--- a/tym-cv.cls
+++ b/tym-cv.cls
@@ -1,17 +1,20 @@
 \NeedsTeXFormat{LaTeX2e}
 \ProvidesClass{tym-cv}[2020/09/23 tym-cv]
 
-% declare options
-% \ProcessOptions\relax
-
 % load base class
-\LoadClass[a4paper]{article}
+\LoadClass[a4paper,11pt]{article}
+
+% declare options
+% todo class options: icons on/off, font lmodern/libertine and sf/rm, coloroptions, fontsize
+% \DeclareOption{icons}{\def\icons{true}}
+% \ProcessOptions\relax
 
 % load packages
 \RequirePackage[utf8]{inputenc}
-\RequirePackage[scaled]{libertine} %libertine, helvet
-% \RequirePackage[T1]{fontenc}
+% fonts: libertine or lmodern
+\RequirePackage{libertine}
 \renewcommand\familydefault{\sfdefault}
+\RequirePackage[T1]{fontenc}
 \RequirePackage[english]{babel}
 \RequirePackage[cm]{fullpage}
 \RequirePackage[margin=2.0cm]{geometry}
@@ -20,25 +23,27 @@
 \RequirePackage{parskip}
 \RequirePackage{url}
 \RequirePackage{tikz}
+\RequirePackage{expl3}
 \RequirePackage[skins]{tcolorbox}
 \RequirePackage{lastpage}
 \RequirePackage{fancyhdr}
 \RequirePackage{fontawesome}
-\RequirePackage{longtable}
 \RequirePackage{tabularx}
 \RequirePackage{array}
 \RequirePackage{enumitem}
-\RequirePackage{ifthen}
 \RequirePackage{xcolor}
 \definecolor{tym-blue}{RGB}{0,101,189}
 \definecolor{yacolor}{HTML}{000066}
 
 % custom definitions
 % color
+% distinguish between cvcolor (name) iconcolor, section headings color and letter color
 \newcommand*{\cvcolor}{yacolor}
+\newcommand*{\cvicon}{\cvcolor}
+\newcommand*{\cvheading}{\cvcolor}
+\newcommand*{\cvltr}{\cvcolor}
 % links
 \hypersetup{hidelinks,linkcolor=black}
-% TODO: distinguish between linkcolor, iconcolor and cvcolor
 % fancyhdr
 \fancyhf{}
 \fancyhfoffset{0em}
@@ -54,19 +59,33 @@
 % define jobtitle
 \newcommand*{\mtitle}[1]{\def\@mtitle{#1}}
 
+%% letter %%
+\newcommand*{\recipient}[2]{\def\@recipientname{#1}\def\@recipientfirm{#2}}
+\newcommand*{\sender}[2]{\def\@sendername{#1}
+\def\@senderinfo{#2}}
+\newcommand*{\when}[1]{\def\@when{#1}}
+\newcommand*{\subject}[1]{\def\@subject{#1}}
+\newcommand*{\opening}[1]{\def\@opening{#1}}
+\newcommand*{\closing}[1]{\def\@closing{#1}}
+\newcommand*{\enclosing}[1]{\def\@enclosing{#1}}
+
 % define picture
-\newcommand*{\photo}[2]{\def\@photo{#2}\def\@photodiameter{#1}}
+\newcommand*{\photo}[5]{\def\@photo{#1}\def\@photodiameter{#2}\def\@yshift{#3}\def\@zoom{#4}\def\@picolor{#5}}
 
 % rendering
 \newcommand*\idphoto{
-  \tikz\path[fill overzoom image={\@photo},draw]circle[radius=0.5\linewidth];
+\begin{tikzpicture}
+    \clip (0,0) circle (\@zoom\linewidth);
+    \node[anchor=center] at (0,\@yshift) { \includegraphics[width=\@photodiameter]{\@photo} };
+    \draw[\@picolor,ultra thick] (0,0) circle (\@zoom\linewidth);
+\end{tikzpicture}
 }
-\newcommand\user[2]{\color{\cvcolor}{\Huge\textbf{#1\,#2}}\color{black}}
-% \newcommand\user[2]{\color{\cvcolor}{\Huge #1 \textsc{\textbf{#2}}}\color{black}}
+
+\newcommand\user[2]{#1 #2}
 
 \newcommand{\socialinfo}[1]{\def\@socialinfo{#1}}
-\newcommand{\socialtext}[2]{\mbox{\textcolor{\cvcolor}{#1}\hspace{0.5em}#2\hspace{1em}}}
-\newcommand{\sociallink}[3]{\mbox{\textcolor{\cvcolor}{#1}\hspace{0.5em}\link{#2}{#3}\hspace{1em}}}
+\newcommand{\socialtext}[2]{\mbox{\color{\cvicon}{#1}\color{black}\hspace{0.5em}#2\hspace{1em}}}
+\newcommand{\sociallink}[3]{\mbox{\color{\cvicon}{#1}\color{black}\hspace{0.5em}\link{#2}{#3}\hspace{1em}}}
 \newcommand\link[2]{\href{#1}{#2}}
 
 % social items
@@ -80,14 +99,14 @@
 
 % setup section headers via titlesec
 \titleformat{\section}{\Large\raggedright}{}{0em}{}[\titlerule]
-\titlespacing{\section}{0pt}{5pt}{7pt}
-\newcommand\sectionTitle[2]{\section{\texorpdfstring{\color{\cvcolor}#2\enspace {#1}}{#1}}}
+\titlespacing{\section}{0pt}{6pt}{9pt}
+\newcommand\sectionTitle[2]{\section{\texorpdfstring{\color{\cvheading}#2\enspace\textbf{#1}}{#1}}}
 
 % define new title
 \makeatletter
 \def\@maketitle{
     \begin{minipage}{\dimexpr\linewidth-\@photodiameter-2em}
-        \user{\@firstname}{\@lastname}\par
+        {\color{\cvcolor}\Huge\bfseries\user{\@firstname}{\@lastname}\color{black}\par}
         \large{\@mtitle}\par
         \bigskip
         \small{\@socialinfo}
@@ -99,6 +118,43 @@
 }
 \makeatother
 
+% define letter macros
+\makeatletter
+\newcommand*\mkltrhead{
+    \clearpage
+    \thispagestyle{empty}
+    % either both \centering or \raggedleft+\raggedright 
+    % or \raggedright+\raggedleft
+    {\raggedright\color{\cvltr}\LARGE\textbf{\user{\@firstname}{\@lastname}}\\\vspace{-0.4em}}
+    \noindent\hrulefill\\
+    {\raggedleft\@senderinfo\par}
+    \vspace{2.5cm}
+    {\raggedright
+    \@recipientfirm\\
+    \@recipientname
+    \par}
+    \vspace{1cm}
+    {\raggedleft\@when\par}
+    \vspace{0.5cm}
+    {\bfseries\@subject\par}
+    \vspace{1.0cm}
+    {\@opening\par}
+}
+\newcommand*\mkltrfoot{
+    \vspace{2cm}
+    {\@closing\par}
+    \vspace{1.5cm}
+    {\user{\@firstname}{\@lastname}\par}
+    \vspace{1cm}
+    {\itshape\sffamily\textcolor{gray}{\@enclosing}}
+}
+\makeatother
+
+% remove reference numbers
+\makeatletter
+\renewcommand\@biblabel[1]{}
+\makeatother
+
 % define footer
 \newcommand*{\makefooter}[3]{%
     \fancyfoot{}
@@ -107,7 +163,7 @@
     \fancyfoot[R]{#3}
 }
 
-\newcommand*{\cvitem}[4][0.0em]{%
+\newcommand*{\cvitem}[4][-0.2em]{%
     \noindent%
     \begin{tabularx}{\textwidth}{p{#3} X}
         {\textbf{#2:}} & {#4}\\
@@ -115,10 +171,10 @@
     \par\addvspace{#1}%
 }
 
-\newcommand*{\cventry}[5][.05em]{%
+\newcommand*{\cventry}[5][-0.25em]{%
     \noindent%
-    \begin{tabularx}{\textwidth}{X r}
-        {\textbf{#3}} & \hfill\textit{{#2}}\\
+    \begin{tabularx}{\textwidth}{X p{3.3cm}}
+        {\textbf{#3}} & \hfill{\textit{#2}}\\
         {#4}\\
         \def\temp{#5}\ifx\temp\empty
         %
@@ -126,23 +182,25 @@
         {#5}
         \fi
     \end{tabularx}
-    \par%\addvspace{#1}
+    \par\addvspace{#1}
+}
+
+\newcommand*{\cvproject}[4][.0em]{%
+    \noindent%
+    \begin{tabularx}{\textwidth}{X}
+        {\textbf{#2}}\\
+        {#3}\\
+        \def\temp{#4}\ifx\temp\empty
+        %
+        \else
+        {#4}
+        \fi
+    \end{tabularx}
+    \par\addvspace{#1}
 }
 
 \newenvironment{profile}{
     \par
 }{
     \par\vspace{0.5em}
-}
-
-% skills environment
-\newenvironment{skills}{%
-  \renewcommand{\arraystretch}{1.1}
-
-  \begin{tabular}{>{}r>{}p{13cm}} 
-}{%
-  \end{tabular}
-}
-\newcommand*\skillsentry[2]{
-  \textbf{#1} &   #2\\ 
 }
