--- a/tym-cv.tex
+++ b/tym-cv.tex
@@ -1,18 +1,21 @@
-\documentclass[12pt]{tym-cv}
+\documentclass[11pt]{tym-cv}
 
-\name{Tim}{Albes}
-\mtitle{Research Associate at Technical University of Munich}
-\photo{3.5cm}{pic.png}
+\name{Your}{Name}
+\mtitle{Researcher at University}
+
+% photo
+% usage \photo{pic}{radius}{yshift}{zoom}{color(white=none)}
+\photo{pic}{3.8cm}{0.0}{0.50}{black}
 
 \socialinfo{
     \email{my.address@mail.com}
     \smartphone{+49 1xx xxxxxx75}\\
-    \linkedin{talbes}
-    \github{talbes}\\
-    \address{Munich, Germany}
-    \website{https://www.ei.tum.de/cph/team-members/tim-albes/}{ei.tum.de/cph}
+    \linkedin{lnkdin}
+    \github{gthb234}\\
+    \address{City, Country}
+    \website{https://www.google.de/}{my-website}
     \vspace{0.75em}\\
-    \infos{Born on X in Y, Germany}
+    \infos{Born on X in Y, Country}
 }
 
 \begin{document}
@@ -20,72 +23,50 @@
 \maketitle
 
 \makefooter%
-{\textsc{October 2020}}
-{\textsc{Curriculum Vitae -- Dr. Tim Albes}}
-{\thepage /\pageref{LastPage}}
+{\textsc{November 2020}}
+{\textsc{Curriculum Vitae -- Your Name}}
+{\thepage/1}
 
 % profile
 \begin{profile}
-Open-minded and collaborative IT professional with strong analytical and programming skills. Recent PhD graduate in Computational Physics/Electrical Engineering with highest distinction; currently developing scientific software and giving online lectures. Passionate about technology and eager to learn and develop new skills. Seeking opportunities to apply my problem-solving skills in the fields of Software Engineering Modeling\,\&\,Simulation, Data Science.
+Open-minded and collaborative professional with strong analytical and programming skills. Recent PhD graduate with highest distinction. Currently developing scientific software and giving online lectures. Well-developed communication competencies due to extensive teaching experience. Passionate about technology and eager to learn and develop new skills. Seeking opportunities to apply my abilities in the fields of maintaining unreadable code, making jokes and testing stuff.
 \end{profile}
+
+\sectionTitle{Skills}{\faTasks}
+\newcommand*{\thetab}{4.1cm}
+\cvitem{Languages}{\thetab}{German (native), English (full professional proficiency), Latin (basics)}
+\cvitem{Programming}{\thetab}{\underline{Proficient}: C/C++, Python, Matlab\newline \underline{Familiar}: Javascript, SQL, Java, R, Fortran}
+\cvitem{Development}{\thetab}{Linux, Bash, Git, CMake, Docker, \LaTeX, VS Code}
+\cvitem{Extraordinary hobbies}{\thetab}{Assisting on construction sites, motorcycle restauration}
+\vskip 0.75em
+
+% in case of languages to be listed separately
+% \sectionTitle{Languages}{\faGlobe}
+% % \cvitem{German}{2cm}{mother tongue}
+% % \cvitem{English}{2cm}{full professional proficiency}
 
 \sectionTitle{Education}{\faMortarBoard}
 %
-\cventry{10/2014--01/2019}{Dr.\,rer.\,nat., Technical University of Munich}{Thesis: \emph{Kinetic Monte Carlo Simulations of Organic Solar Cells}}{Passed with highest distinction "summa cum laude"}{}
-\cventry{10/2007--05/2014}{Dipl.-Phys. (Univ.), Technical University of Munich}{Specializations: Computational Semiconductor Physics}{Grade 1.5 "very good"}{}
-\cventry{09/2001--07/2007}{Abitur, Gymnasium Adolfinum Bückeburg}{Majors: Mathematics, Physics}{}{}
+\cventry{01/2014 -- 01/2019}{Dr.\,cerv., Technical University}{Thesis: \emph{Influence of a-beer-a-day at work on the team spirit}}{Passed with highest distinction "summa cum laude"}
+\cventry{01/2007 -- 01/2014}{Dipl.-Chol., Technical University}{Specializations: Getting by}{Grade 1.2 "outstanding"}
+\cventry{01/2001 -- 01/2007}{Abitur, Gymnasium Hereandthere}{Majors: Collecting legendaries}{ }
+
+\sectionTitle{Experience}{\faRoad}
 %
-%
-\sectionTitle{Experience}{\faRoad} %\faRoad,\faSuitcase,\faGroup,\faDatabase
-\cventry{02/2020 -- present}{Associate Researcher, Technical University of Munich}{Department of Electrical and Computer Engineering, Professorship Computational Photonics}{\vspace{-0.2em}
-    \begin{itemize}\itemsep2pt
-        \item Preparation and conduction of lectures for 200+ students (Circuit Theory, Numerical Methods)
-        \item Developing scientific software to model quantum cascade lasers (C/C++, Matlab, Fortran)
-        \item Setup and administration of video-recording setup for online lectures
+\cventry{past -- present}{Sabattical}{Personal time-off due to reasons.}{\vspace{-0.2em}
+    \begin{itemize}\itemsep1pt
+    \item Traveling the world
+    \item Taking classes in modern technologies
     \end{itemize}
 }
-\cventry{02/2019 -- 01/2020}{Sabattical, Asia and Europe}{Personal time-off after doctoral thesis to gain international and cultural experience as well as self-development in the IT sector}{\vspace{-0.2em}
-    \begin{itemize}\itemsep2pt
-    \item Traveling Southeast Asia, Middle East, Europe
-    \item Taking classes in Computer Science, Programming, Statistics, Machine Learning
-    \end{itemize}
-}
-\cventry{10/2014--01/2019}{Doctoral Candidate, Technical University of Munich}{Department of Electrical and Computer Engineering, Professorship Simulation of Nanosystems for Energy Conversion}{\vspace{-0.2em}
-\begin{itemize}\itemsep2pt
-\item Conceptualization and implementation of a kinetic Monte Carlo simulation framework (C/C++) of organic solar cells
-\item Finite element simulations of organic solar cells (TiberCAD)
-\item Data analysis and visualization of large datasets (Python)
-\item Presentation on international conferences, e.g., in Boston and Rome
-\item Publication of 10+ articles in reputable peer-reviewed journals and books
-\item Preparation and conduction of courses on Nanotechnology and Computational Methods at TUM and NTU Singapore for four consecutive years
-\item Supervision of undergraduate and graduate student's theses
-\item Setup and administration of Linux servers for scientific simulations
-\end{itemize}
-}
-
-\sectionTitle{Skills}{\faTasks}
-\cvitem{Programming Languages}{5cm}{C/C++, Python, Matlab, Javascript, SQL, R, Java, Fortran}
-\cvitem{Frameworks/Libraries}{5cm}{Numpy/Scipy, Pandas, Flask, jQuery, openCV}
-\cvitem{Development}{5cm}{Linux, Bash, Git, CMake, Docker, \LaTeX}
-\cvitem{TCAD\,/\,FEM}{5cm}{TiberCAD, deal.II, Synopsys Sentraurus}
-\cvitem{Technical knowledge}{5cm}{Monte Carlo methods, stochastic process modeling, data analysis, data visualization}
-% \cvitem{Interpersonal skills}{\thetab}{Problem-solving, effective communication, teamwork, adaptability, distinctive work ethic}
-% \cvitem{Personal traits}{\thetab}{Passionate about technology, eager to learn, appreciation of diversity, independent but collaborative}.
-
-%
-\sectionTitle{Languages}{\faGlobe}
-\cvitem{German}{2cm}{mother tongue}
-\cvitem{English}{2cm}{full professional proficiency}
 
 \sectionTitle{Projects}{\faLaptop}
-\cventry{ }{pyOES -- an oral exam scheduling system}{Manage exam registration slots across multiple lectures via a central database. pyOES drastically reduces the time needed to manage exam schedules.}{\emph{Keywords:} Javascript, Python (Flask), SQL, Docker}
-\cventry{ }{Android app: Sprücheklopfer}{Sound dashboard of memorable phrases from German media and TV.}{\emph{Keywords:} Java, XML}
-\cventry{ }{tym-CV}{A Latex CV Class (available on github)}{\emph{Keywords:} \LaTeX, CMake, git}
-\cventry{ }{Automated darts scoreboard}{Automatically evaluate darts scores by use of computer vision and machine learning.}{\emph{Keywords:} Python (opencv)}
 %
+\cvproject{tym-CV}{A class template for a modern, profile-based CV (available on github).}{\emph{Keywords:} \LaTeX, CMake}
+\vskip 0.5em
 
 % % % References (Bibliography)
-\sectionTitle{Selected publications}{\faQuoteLeft}
+\sectionTitle{Publications}{\faQuoteLeft}
 \nocite{*}
 {
 \renewcommand{\section}[2]{}%
@@ -93,11 +74,20 @@ Open-minded and collaborative IT professional with strong analytical and program
 \bibliography{publications}
 }
 
-\clearpage
+%% letter %%
+\recipient{Ms. HR}{Desired Company AG}
+\sender{Your Name}{Mail: my.mail@mail.com \quad Phone: +49\,1xx\,xxxxxx75}
+\subject{Application as Consultant}
+\when{14. November 2020}
+\opening{Dear Ms. HR,}
+\closing{Sincerely,}
+\enclosing{Enclosing: CV, Certificates}
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis ullamcorper neque sit amet lectus facilisis sed luctus nisl iaculis. Vivamus at neque arcu, sed tempor quam. Curabitur pharetra tincidunt tincidunt. Morbi volutpat feugiat mauris, quis tempor neque vehicula volutpat. Duis tristique justo vel massa fermentum accumsan. Mauris ante elit, feugiat vestibulum tempor eget, eleifend ac ipsum. Donec scelerisque lobortis ipsum eu vestibulum. Pellentesque vel massa at felis accumsan rhoncus.
+\mkltrhead
+I am pleased to apply for a position as Consultant at Desired Company AG. I believe I am a perfect fit for DC AG because I am passionate about your products. During two open days I have already made first contact with your company and selected employees. My skills are extraordinary and the combination of implementing new stuff and customer-focus fits my career ambitions perfectly.
 
-Albert Einstein discovered that $e=mc^2$ in 1905.
+Please let me know if you have further questions. I would be greatful if you gave me the opportunity to present myself and my skills personally during an interview.
 
+\mkltrfoot
 
 \end{document}
